--- a/TMTracker/Info.plist
+++ b/TMTracker/Info.plist
@@ -29,6 +29,10 @@
 		<key>NSExceptionDomains</key>
 		<dict/>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
